# MVP1

./: .env  .gitignore  README.md  db.sqlite3  docker-compose.yml  manage.py  package-lock.json  package.json  requirements.txt  webpack.config.js
.github/workflows/: main.yml
accounts/: apps.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_antecedentes_dadosbiometricos.py  0003_userprofile_marital_status_userprofile_profession_and_more.py  0004_remove_userprofile_address_userprofile_city_and_more.py
client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx
docker/: backend.Dockerfile  django.Dockerfile  frontend.Dockerfile
health_mvp/: asgi.py  context_processors.py  settings.py  urls.py  wsgi.py
medical_records/: apps.py  models.py  urls.py  views.py
medical_records/migrations/: 0001_initial.py  0002_medicamentobrasilanvisa_usermedication.py
scheduling/: apps.py
server/: pyproject.toml  requirements.txt
server/alembic/versions/: initial_migration.py
server/app/: main.py
server/app/api/v1/endpoints/: health.py
server/app/auth/: jwt.py
server/app/core/: config.py  logging.py  security.py
server/app/db/: session.py
server/app/models/: user.py
server/app/routes/: auth.py
static/css/: auth.css  style.css  styles.css
staticfiles/css/: auth.css  style.css
templates/: base.html  home.html  home_logged.html
templates/account/: edit_profile.html  email_confirmation_sent.html  login.html  password_change.html  profile.html  signup.html
templates/medical_records/: manage_medications.html
(+14 files in other folders)
